tests/error/misc_errors/entrypoint_unsupported_nested_array_arg.err
Error: Unsupported entrypoint argument type (at $FILE:6:8)
  | 
4 | 
5 | @guppy
6 | def foo(x: array[array[float, 3], 2]) -> None:
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Nested arrays are not supported as entrypoint arguments.

Guppy compilation failed due to 1 previous error
